force-app/main/default/objects/CaseTracker__e/CaseTracker__e.object-meta.xml
<CustomObject>
    <label>CaseTracker</label>
    <pluralLabel>CaseTrackers</pluralLabel>
</CustomObject>