force-app/main/default/objects/CaseTracker__e/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <label>OrganizationId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>