force-app/main/default/objects/CaseTracker__e/fields/QualityTypeCode__c.field-meta.xml
<CustomField>
    <fullName>QualityTypeCode__c</fullName>
    <label>QualityTypeCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>