force-app/main/default/objects/CaseTracker__e/fields/QualityTypeId__c.field-meta.xml
<CustomField>
    <fullName>QualityTypeId__c</fullName>
    <label>QualityTypeId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>