force-app/main/default/objects/CaseTracker__e/fields/Return_Content__c.field-meta.xml
<CustomField>
    <fullName>Return_Content__c</fullName>
    <label>Return Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>