force-app/main/default/objects/CaseTracker__e/fields/SFID__c.field-meta.xml
<CustomField>
    <fullName>SFID__c</fullName>
    <label>SFID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>